# plnt

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  IMPROVEMENTS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md  fly.toml  pyproject.toml  runtime.Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
deploy/: RUNBOOK-do-k8s.md
deploy/do-k8s/: cert-issuer.yaml  values-do.yaml
docker/: playground-api.Dockerfile
docs/: ERD.md  FULL-PITCH.md  ONE-PAGER.md  PITCH.md  PRD-playground.md  PRD.md  api-contract.md  architecture.md  build-pdfs.sh  eng-principles.md  getting-started.md  glossary.md  index.md  kind-demo.md  local-dev.md  observability.md  pdf-style.css  threat-model.md
docs/pdf/: full-pitch.html  one-pager.html
examples/: llama-3.1-70b-instruct.yaml  values-playground-hosted.yaml  values-playground-nim.yaml  values-playground.yaml
plnt/: __init__.py  cli.py  config.py
plnt-tui/: README.md  go.mod
plnt/compute/: __init__.py  backend_picker.py  router.py
plnt/control/: __init__.py  acc.py  budget.py  clarify.py  dag.py  orchestrator.py  parallel.py  planner_llm.py  skill_installer.py  skill_schema.py  skills.py  synthesizer.py  triage.py
plnt/execution/: __init__.py  blackboard.py  runner.py  spec.py
skills/: code-shepherd.md  general-helper.md  inbox-triage.md  literature-scout.md  paper-reader.md  research-librarian.md
tests/: conftest.py  test_acc.py  test_backend_picker.py  test_blackboard.py  test_budget.py  test_docker_sandbox.py  test_monitor.py  test_orchestrator_e2e.py  test_parallel.py  test_playground_api.py  test_router.py  test_sandbox.py  test_shared_workdir.py  test_site_contract.py  test_skill_installer.py  test_skill_schema.py  test_skills.py  test_spec.py  test_tools.py
(+74 files in other folders)
