[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plnt"
version = "0.0.1"
description = "Plnt — Personal Local Native Twin. A local-first runtime where one resident planner spawns a swarm of sandboxed micro-agents on your own hardware."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Plnt" }]
keywords = ["agents", "local-first", "swarm", "sandbox", "ollama", "exo", "personal-ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "structlog>=24.0",
    "sse-starlette>=2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
]
semantic = [
    "fastembed>=0.3",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
]

[project.scripts]
plnt = "plnt.cli:main"
plnt-agent-runner = "plnt.execution.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plnt*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
